# excel_framework

./: .gitignore  pyproject.toml  stack.py  table.py  test.py  upload_guide.md
buildables/layout/: column.py  layout.py  row.py
buildables/non_layout/: default_table.py  excel_cell.py  stieber_default_table.py  table.py
excel/: excel.py  excel_file.py  excel_sheet.py
internals/: build_context.py  buildable.py  internals.py
sizes/: column_dimension.py  column_size_data.py  dimension.py  resizer.py  row_dimension.py  size.py  sizes.py
src/excel_framework/: __init__.py
src/excel_framework/buildables/layout/: column.py  row.py  table.py
src/excel_framework/buildables/non_layout/: excel_cell.py  stieber_default_table.py
src/excel_framework/excel/: excel_file.py
src/excel_framework/internals/: build_context.py  buildable.py
src/excel_framework/styling/: border.py  fill.py  style.py  styler.py  text_style.py
styling/: border.py  cell_style.py  color.py  fill.py  style.py  styler.py  styling.py  text_style.py
ui_pieces/: ui_piece.py
ui_pieces/layout/: column.py  row.py
ui_pieces/non_layout/: default_table.py  excel_cell.py  stieber_default_table.py  table.py
